Correct contrast wav errors.

--- a/FinalProject/src/app/components/footerdata/footerdata.component.css
+++ b/FinalProject/src/app/components/footerdata/footerdata.component.css
@@ -2,5 +2,5 @@ p {
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: 20px;
-  color: gray;
+  color: rgb(99, 99, 99);
 }
